#96 - move scalatest plugin to the one place it can run ~cut-release